# AirportSimulation

./: CMakeLists.txt
googletest/: CMakeLists.txt
main/: CMakeLists.txt  MainTest.cpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/commands/: CMakeLists.txt  CmdIdle.h  CmdLandingsNumber.h  CmdPlanesOnLandExceededCapacityHistoric.h  CmdPlanesOnLandNumber.h  CmdPlanesSentAnotherAirportHistoric.h  CmdPlanesWaitingGreaterThanFiveHistoric.h  CmdPlanesWaitingNumber.h  CmdRemoveData.cpp  CmdRemoveData.h  CmdRunSimulator.cpp  CmdRunSimulator.h  CmdTakeOffRequestGreaterThanFiveHistoric.h  CmdToListUnreadEvents.cpp  CmdToListUnreadEvents.h  CmdWindChangesHistoric.h  Command.h  TemplateProcessReport.cpp  TemplateProcessReport.h
src/app/gui/: AppInterface.h  CMakeLists.txt  Console.cpp  Console.h  ConsoleGui.cpp  ConsoleGui.h  Gui.cpp  Gui.h  UserInterface.h
src/app/main/: App.cpp  App.h  CMakeLists.txt  MainTest.cpp
src/domain/: Aircraft.h  AircraftManipulator.cpp  AircraftManipulator.h  Airport.cpp  Airport.h  CMakeLists.txt  Converter.cpp  Converter.h  Data.cpp  Data.h  DataVendorToReport.cpp  DataVendorToReport.h  LandedReport.cpp  LandedReport.h  Mediator.h  Observable.h  OnLandReport.cpp  OnLandReport.h  Plane.cpp  Plane.h  PlanesOnLandExceededCapacityReport.cpp  PlanesOnLandExceededCapacityReport.h  PlanesSentAnotherAirportReport.cpp  PlanesSentAnotherAirportReport.h  PlanesWaitingGreaterThanFiveReport.cpp  PlanesWaitingGreaterThanFiveReport.h  PlanesWaitingReport.cpp  PlanesWaitingReport.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  Report.h  ReportFactory.cpp  ReportFactory.h  ReportMediator.cpp  ReportMediator.h  ReportSingleValueWithHistoric.cpp  ReportSingleValueWithHistoric.h  ReportSingleValueWithoutHistoric.cpp  ReportSingleValueWithoutHistoric.h  RequestTakeOffGreaterThanFiveReport.cpp  (+19 more)
src/domain/airport/: Aircraft.h  Airport.cpp  Airport.h  Plane.cpp  Plane.h  RunWay.h  Wind.cpp  Wind.h
src/domain/log/: AircraftLog.cpp  AircraftLog.h  Log.cpp  Log.h  LogManipulator.cpp  LogManipulator.h  TowerOfCommandLog.cpp  TowerOfCommandLog.h  WindLog.cpp  WindLog.h
src/domain/report/: DataMediator.cpp  DataMediator.h  DataReport.cpp  DataReport.h  DataVendorToReport.cpp  PlanesWaitingReport.cpp  PlanesWaitingReport.h  Report.h  ReportFactory.h  SingleValueWithoutHistoricReport.cpp  TimeHistoricReport.cpp
src/domain/simulator/: AircraftManipulator.cpp  AircraftManipulator.h  Simulator.cpp  Timer.h  WindManipulator.cpp
src/interface/: CMakeLists.txt
src/main/: App.cpp  App.h  CMakeLists.txt  CmdIdle.h  CmdLandingsNumber.h  CmdPlanesOnLandExceededCapacityHistoric.h  CmdPlanesOnLandNumber.h  CmdPlanesSentAnotherAirportHistoric.h  CmdPlanesWaitingGreaterThanFiveHistoric.h  CmdTakeOffRequestGreaterThanFiveHistoric.h  CmdWindChangesHistoric.h  ConsoleGui.cpp  ConsoleGui.h  Gui.h  MainTest.cpp  TemplateProcessReport.h
src/util/: Converter.cpp  Converter.h  InputControl.cpp  InputControl.h  Random.cpp  RandomNumberGenerator.h
test/: .h  AircraftFake.h  AircraftMock.h  AircraftTest.cpp  AirportTest.cpp  CMakeLists.txt  MainTest.cpp  ObservableMock.h  ObservableTest.cpp  ObserverFake.h  ObserverMock.h  PlaneTest.cpp  RunWayTest.cpp  RunWayTest.h  TimerTest.cpp  TowerOfCommandDumie.h  TowerOfCommandStumb.h  WindTest.cpp  testeDeAlgoritmos.cpp
